--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,13 +7,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/reset.css"/>
     <link rel="stylesheet" href="../css/index.css"/>
-    <script type="text/javascript" src="../js/utils/flexble.js"></script>
+    <script type="text/javascript" src="../utils/flexible.js"></script>
     <script type="text/javascript" src="../js/index.js"></script>
 </head>
 <body>
 <div id="heart">
     <img src="../images/heart.png" alt="">
-    <p>D</p>
+    <p>D&L</p>
 </div>
 </body>
 </html>
